# AURIGA_TEST

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  mat4x4.cpp  mat4x4.h
test/: test.cpp
